--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ exclude: [node_modules, package.json, npm-debug.log, gulpfile.js]
 
 sass:
   sass_dir: assets/css
-  # style: :nested
+  # style: compressed
 
 
 collections:
