Added filtering of recs, new footer

--- a/_config.yml
+++ b/_config.yml
@@ -20,3 +20,7 @@ collections:
    recommendations:
       output: true
       permalink: /recommendations/:path/
+
+   articles:
+      output: true
+      permalink: /articles/:path/
